updated the naming of an image

--- a/genesis.html
+++ b/genesis.html
@@ -19,7 +19,7 @@
 
             <div id='main-page'>
                 <div id='banner-container'>
-                    <img id='banner' src='res/images/banner_cropped_v4.jpg'/>
+                    <img id='banner' src='res/images/g3_banner.jpg'/>
                 </div>
 
                 <div id='main-content'>
