--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
             </div>
 
             <div id='main-page'>
-                <div id='banner-home'>
-
+                <div id='banner-container'>
+                    <img id='banner' src='res/images/home_banner.png'/>
+                </div>
+                <div id='home-banner-sep'>
 
                 </div>
+
+                <div id='main-content'>
+                    <p> This is where some stuff should go!</p>
+                <div>
 
                 <!-- I'm not sure if I want to have a main content div here.... -->
                 <!-- The layout of the home might be slightly different than the other pages -->
