Added some home page text and a button
Things are starting to shape up pretty well around here... we might
have ourselves a website soon enough!  Next goal is to add another cool
content section to the home page that links to the g3 article, then I
want to flesh out the past articles page... I have some loose ideas for
what that one is going to look like, but for now it's all just in my
head!

--- a/index.html
+++ b/index.html
@@ -26,7 +26,28 @@
                 </div>
 
                 <div id='main-content'>
-                    <p> This is where some stuff should go!</p>
+                    <div>
+                        <h3>About</h3>
+                    </div>
+
+                    <div id='about-content'>
+                        <div>
+                            <p>
+                                The Melee Newsletter is a bi-weekly article written about all things Super Smash Bros. Melee!  Whether it be a california local
+                                or a supermajor, at home or abroad, the Melee Newsletter helps get you in the know!  Follow the recent storylines of top players,
+                                stay up to date on what's hot in the meta!  You'll never miss a nail biting set thanks to our top of the line recap articles that
+                                highlight the best and brightest of every event!  If this sounds interesting to you, click the 'Subscribe' button to be added to
+                                our email list!  Thanks, and happy smashing!
+
+                            </p>
+                        </div>
+
+                        <div id='subscribe-button-container'>
+                            <a href="contact.html" class="button">Subscribe!</a>
+                        </div>
+
+                    </div>
+
                 <div>
 
                 <!-- I'm not sure if I want to have a main content div here.... -->
@@ -34,12 +55,6 @@
 
             </div>
         </div>
-
-
-
-
-        <!-- Let's Try to insert a pdf in that case, then -->
-        <!-- Rip, inserting the PDF is terrible, lol -->
 
 
     </body>
