Added a section on the home page for genesis

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
                 </div>
 
                 <div id='main-content'>
-                    <div>
-                        <h3>About</h3>
-                    </div>
 
                     <div id='about-content'>
                         <div>
+                            <h3>About</h3>
+
                             <p>
                                 The Melee Newsletter is a bi-weekly article written about all things Super Smash Bros. Melee!  Whether it be a california local
                                 or a supermajor, at home or abroad, the Melee Newsletter helps get you in the know!  Follow the recent storylines of top players,
@@ -43,7 +42,27 @@
                         </div>
 
                         <div id='subscribe-button-container'>
-                            <a href="contact.html" class="button">Subscribe!</a>
+                            <a href="contact.html" class="button b1">Subscribe!</a>
+                        </div>
+
+                    </div>
+
+                    <div id='featured-content'>
+                        <div>
+                            <h3>Featured</h3>
+
+                            <p>
+                                Genesis... one of the most infamous tournament series in smash history.  It marks the fist time an international player came to
+                                american soil and won a major tournament.  It's the origin story of one of the greatest rivalries in all of smash: Mango vs Armada.
+                                Genesis embodies all that makes melee great, and all that made it the esport it is today.  Read about it's revival - Genesis 3 in
+                                2015, from the perspective of an attendee, and immerse yourself in the tournament experience of a lifetime.  Click the link to learn
+                                more...
+                            </p>
+
+                        </div>
+
+                        <div id='g3-button-container'>
+                            <a href="genesis.html" class="button b2">Subscribe!</a>
                         </div>
 
                     </div>
