Added a footer to index and genesis

--- a/genesis.html
+++ b/genesis.html
@@ -22,7 +22,7 @@
                     <img id='banner' src='res/images/g3_banner.jpg'/>
                 </div>
 
-                
+
 
                 <div id='main-content'>
 
@@ -444,6 +444,14 @@
                         </p>
                     </div>
 
+                </div>
+
+
+                <div class='footer'>
+                    <div>
+                        <hr class='footer-break'>
+                        <p>The code for this site can be found on <a href='https://github.com/gainge/cs260_melee_newsletter'>Github</a></p>
+                    </div>
                 </div>
 
 
