--- a/index.html
+++ b/index.html
@@ -67,13 +67,19 @@
 
                     </div>
 
-                <div>
+                </div>
 
-                <!-- I'm not sure if I want to have a main content div here.... -->
-                <!-- The layout of the home might be slightly different than the other pages -->
+                <div class='footer'>
+                    <div>
+                        <hr class='footer-break'>
+                        <p>The code for this site can be found on <a href='https://github.com/gainge/cs260_melee_newsletter'>Github</a></p>
+                    </div>
+                </div>
 
             </div>
+
         </div>
+
 
 
     </body>
