--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
 
                         <div id='g3-button-container'>
-                            <a href="genesis.html" class="button b2">Subscribe!</a>
+                            <a href="genesis.html" class="button b2">Featured</a>
                         </div>
 
                     </div>
