Finished the contact page
The contact page is now done and "Working", thought the form submission
really doesn't do anything, lol.
Overall I'm like, decently pleased with the visuals for the site, but
not super stoked.  I spent the majority of my time, by far, on the
featured article's page, which may or may not have been a good choice.

Hopefully whoever's grading this site will check out some of the past
articles, because a couple of them (*coug* TBH5 *cough*) are pretty
darn schnazzy

--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,45 @@
                         </div>
                     </div>
 
+                    <div id='byu-melee-container'>
+
+                        <div id='byu-melee-content'>
+
+                            <p>
+                                This page was originally created for the members of BYU Melee, a Super Smash Bros Melee club at Brigham Young University.
+                                If you're interested
+                                in playing with us, or just want to find out more, check out the links below to our social media outlets!
+                            </p>
+
+                            <div id='social-container'>
+
+                                <div class='img-container'>
+                                    <img class='social-img' src='res/images/SocialMediaIconFacebook.png'/>
+                                </div>
+                                <div class='link-container'>
+                                    <a class='media-link' href='https://www.facebook.com/groups/BYUMelee/'>BYU Melee Facebook Group</a>
+                                </div>
+                                <div class='img-container'>
+                                    <img class='social-img' src='res/images/SocialMediaIconYoutube.png'/>
+                                </div>
+                                <div class='link-container'>
+                                    <a class='media-link' href='https://www.youtube.com/channel/UCkegb1U7uIpdiJdcQqxIgJQ'>BYU Melee Youtube</a>
+                                </div>
+                                <div class='img-container'>
+                                    <img class='social-img' src='res/images/SocialMediaIconTwitch.png'/>
+                                </div>
+                                <div class='link-container'>
+                                    <a class='media-link' href='https://twitch.tv/judge9'>Twitch.tv/Judge9</a>
+                                </div>
+
+                            </div>
+
+
+                        </div>
+
+
+                    </div>
+
 
 
                 </div>
